--- a/struct/06-goalDesign.tex
+++ b/struct/06-goalDesign.tex
@@ -1,7 +1,13 @@
 \section{Goal Design}
-As mentioned in the beginning of this report, the major influencer for the goal design is the battery consumption. We presented our findings on how much battery each goal component uses in the chapter Test and are now ready to reason upon these findings.
+As mentioned in the beginning of this report, the major influencer for the goal design is the battery consumption. We presented our findings on how much battery each goal component uses in the chapter Tests and in this chapter draw conclusions for the actual goal design.
 
-The power consumption of each component is quite significant
+The power consumption of each component is quite significant. Together, the laser  and sensor consume $28.5mA$ while the esp consumes $80mA$ during computation intensive tasks and $20mA$ in idle. Letting the lasers run all the time is thus similar to letting the esp32 run on idle all time. Letting the laser run at al times makes little sense though and booting up the esp32 more than needed is also a waste of power. So our conclusion is to make the goal smart and the esp32 has a hold function for its pins that enables us to do excatly\cite{GPIORTCG11esp32letPinsOn:online}. The function "esp_err_trtc_gpio_hold_en(gpio_num_tgpio_num)" holds the current on a specific port even when the esp32 goes into deepsleep.
+
+This allows a va
+
+So going forward our intention is to have a smart way of powering on and of both devices. 
+
+
 
 let pin run high.
 https://docs.espressif.com/projects/esp-idf/en/latest/api-reference/peripherals/gpio.html#_CPPv216rtc_gpio_hold_en10gpio_num_t
