--- a/struct/04-architecture.tex
+++ b/struct/04-architecture.tex
@@ -2,7 +2,7 @@
 The system architecture defines the structure and behaviour of a system. IAFoosball is a solution for an interactive user experience for foosball. It thus compromises a cloud part, an edge part and a constrained device (IoT part). This is shown in \cref{fig:systemArch}. We will focus on the edge and IoT part and only briefly touch on the cloud part for completeness. 
 \begin{figure}[h!]
     \centering
-    \includegraphics[scale=0.3]{figures/system-arch.png}% picture filename
+    \includegraphics[scale=0.3]{figures/system-arch.png}
     \caption{The System Architecture}\label{fig:systemArch}
 \end{figure}\\
 The cloud is where all user relevant data is stored and where the system is administered. It runs on Kubernetes, which abstracts the physical hardware programs run on and puts them into pods. Pods are smallest unit in Kubernetes and are isolated into their own namespace and cgroup and can contain multiple containers. Unlike virtual machine, it does not create any overhead at runtime for containers, but t offers the possibility to fully orchestrate the pods. This means, pods can restarted if they are not behaving correctly, replicas can be turned up or down depending on the system load, it offers automated rollouts and the Kubernetes itself is highly extensible.\\
