Updates from Overleaf

--- a/struct/02-iafoosball.tex
+++ b/struct/02-iafoosball.tex
@@ -7,8 +7,14 @@ IAFoosball is the name of the project and startup we developed in the previous s
     \caption{The current IAFoosball architecture}\label{fig:architectureCurr}
 \end{figure}
 
-The foosball table in ***PLEASE UPLOAD PICTURE***% \cref{fig:} 
-is the development version and has all features. It includes, speakers with Spotify integration, LED lights, automatic ball release and a tablet. However, the software and hardware used on the table does not life up to the software standards at IAFoosball. The software needs to be updated locally without a CI/CD (continous integration and continous delivery) pipeline and is attached physically to the IoT gateway, the raspberry pi. This makes it very hard to scale and not mainstream suitable. To make IAFoosball more compelling for people and business which just want goal counting, and possibly ball speed measurments, we wanted to cut down on features and instead concentrate on quality.\\
+The foosball table in seen in \cref{fig:overview_table} 
+
+\begin{figure}[h!]
+    \centering
+    \includegraphics[scale=0.09]{figures/overview_table.jpg}}% picture filename
+    \caption{The current IAFoosball table hardware}\label{fig:overview_table}
+\end{figure}
+In \cref{fig:overview_table} the development version can be seen, and has all features. It includes, speakers with Spotify integration, LED lights, automatic ball release and a tablet. However, the software and hardware used on the table does not life up to the software standards at IAFoosball. The software needs to be updated locally without a CI/CD (continous integration and continous delivery) pipeline and is attached physically to the IoT gateway, the raspberry pi. This makes it very hard to scale and not mainstream suitable. To make IAFoosball more compelling for people and business which just want goal counting, and possibly ball speed measurments, we wanted to cut down on features and instead concentrate on quality.\\
 
 
 \subsection{Goal Design}
